# playfast

./: Cargo.toml  README.md  cliff.toml  mkdocs.yaml  pyproject.toml
.github/: RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  version.yml
docs/: BATCH_API.md  WEBVIEW_FLOW_ANALYSIS.md  changelog.md  ci-optimization.md  faq.md  getting_started.md  index.md  installation.md  license.md  pre-commit-hooks.md  release-workflow.md
docs/api/: API_IMPROVEMENTS_COMPLETED.md  DATA_FLOW_ANALYZER.md
docs/development/: setup.md
docs/performance/: FINAL_REPORT.md  OPTIMIZATION_SUMMARY.md  PARALLEL_PROCESSING.md
python/playfast/: __init__.py  apk.py  core.pyi  rust_client.py
scripts/: safe_release.py  sync_changelog.py
src/: lib.rs
