[package]
name = "playfast"
version = "0.5.6"
edition = "2021"

[lib]
name = "core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[[test]]
name = "integration_tests"
path = "tests/rust/integration_tests.rs"

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py311"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }  # Use rustls instead of OpenSSL
# gpapi currently enables reqwest's native TLS defaults through its dependency tree.
# Keep OpenSSL vendored for manylinux wheels instead of relying on system OpenSSL.
openssl-sys = { version = "0.9", features = ["vendored"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.20.2"
scraper = "0.24.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"

# DEX and APK analysis
rusty-axml = "0.2.1"
arsc = "0.1.5"
rayon = "1.10"
zip = "6.0.0"
byteorder = "1.5"  # For reading binary data in little-endian format

# Google Play API for APK download
# Pin git revision to avoid CI breakage from upstream API drift.
gpapi = { git = "https://github.com/EFForg/rs-google-play.git", rev = "a1b22be9089ccbfd568992a7d82e9539c6e1c747", package = "gpapi" }
