[package]
name = "playfast"
version = "0.5.9"
edition = "2021"

[lib]
name = "core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[[test]]
name = "integration_tests"
path = "tests/rust/integration_tests.rs"

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py311"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }  # Use rustls instead of OpenSSL
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.20.2"
scraper = "0.24.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"

# DEX and APK analysis
rusty-axml = "0.2.1"
arsc = "0.1.5"
rayon = "1.10"
zip = "6.0.0"
byteorder = "1.5"  # For reading binary data in little-endian format

# Google Play API for APK download.
# Use a fork that switches reqwest to rustls-tls only, keeping the wheel
# free of native-tls / openssl-sys.
gpapi = { git = "https://github.com/taeyun16/rs-google-play.git", rev = "fd3d87c", package = "gpapi" }

# tokio-dl-stream-to-disk pulls in reqwest with default-tls, which drags
# native-tls into the build. Patch to a fork that uses rustls-tls only.
[patch.crates-io]
tokio-dl-stream-to-disk = { git = "https://github.com/taeyun16/tokio-dl-stream-to-disk.git", rev = "052e91b" }
