[project]
name = "playfast"
version = "0.5.5"
description = "Playfast - Lightning-Fast Google Play Store Scraper"
readme = "README.md"
authors = [
    { name = "Taeyun Jang", email = "taeyun16@pm.me" }
]
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "google-play",
    "scraper",
    "async",
    "rust",
    "pyo3",
    "performance",
    "free-threading"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.13.0",
    "pydantic>=2.12.0",
]

[project.urls]
source = "https://github.com/taeyun16/playfast"
documentation = "https://mixl1nk.github.io/playfast/"
changelog = "https://github.com/taeyun16/playfast/blob/master/CHANGELOG.md"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
# ============================================================================
# CI-specific groups (minimal dependencies for fast CI)
# ============================================================================

# CI Test job - 6 packages (was 16 in dev group)
ci-test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist[psutil]>=3.6.1",
    "maturin>=1.9.6",
]

# CI Lint job - 2 packages (was 16 in dev group)
ci-lint = [
    "ruff>=0.14.0",
    "pyright>=1.1.406",
]

# ============================================================================
# Local development groups
# ============================================================================

# Release tools (local only, not used in CI)
release = [
    "python-semantic-release>=10.4.1",
    "git-cliff>=2.10.1",
]

# Development convenience tools (local only)
tools = [
    "poethepoet>=0.37.0",
    "pre-commit>=4.3.0",
    "rich>=14.2.0",
    "mypy>=1.18.2",
]

# Documentation build (already optimized with --only-group docs)
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.28.0",
]

# Profiling tools (optional)
profile = [
    "memory-profiler>=0.61.0",
]

# ============================================================================
# Combined group for local development
# ============================================================================

# Full development environment (includes all groups)
dev = [
    { include-group = "ci-test" },
    { include-group = "ci-lint" },
    { include-group = "release" },
    { include-group = "tools" },
]

# Notes:
# - CI uses only pyright for speed; local dev uses both pyright + mypy
# - Removed tomli (Python 3.11+ has built-in tomllib)
# - CI jobs now use --only-group ci-test or ci-lint for faster installs
# - Local devs use 'dev' group for full environment

[project.scripts]
playfast = "playfast:main"

[tool.maturin]
module-name = "playfast.core"
python-packages = ["playfast"]
python-source = "python"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.ruff]
line-length = 88
fix = true
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "__pycache__",
    "target",
    "dist",
    "examples",
]
target-version = "py312"  # minimum supported version

[tool.ruff.format]
# Black compatible settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "D417", # undocumented-param
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FBT001", # flake8-boolean-trap
  "I", # isort
  "ICN", # flake8-import-conventions
  "INT", # flake8-gettext
  "PERF", # perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
]

ignore = [
  # ------------------------------------------------------------------
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring (conflicts with D211)
  "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
  # ------------------------------------------------------------------
  "ANN401", # Dynamically typed expressions (Any) are disallowed
  "D401", # Relax NumPy docstring convention: first line should be imperative
  "E501", # Line length regulated by formatter
  "FBT001", # Boolean-typed positional argument - acceptable design pattern
  "PT011", # pytest.raises is too broad, set match or use a more specific exception
  "PT012", # pytest.raises block with try/except - needed for testing exception chaining
  "PYI041", # Use float instead of int | float
  "RUF022", # `__all__` is not sorted
  "RUF005", # Consider expression instead of concatenation
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "SIM108", # Use ternary operator
  "SIM114", # Combine `if` branches
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-first-party = ["playfast"]
force-single-line = false
lines-after-imports = 2
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow star imports in __init__
"tests/**" = [
    "T20",       # Allow print statements
    "ANN",       # Allow missing type annotations
    "B007",      # Allow unused loop variables
    "B017",      # Allow assertRaises without match
    "D",         # Allow missing docstrings
    "E722",      # Allow bare except
    "PERF401",   # Allow manual list comprehension
    "RUF001",    # Allow ambiguous unicode characters (emojis)
    "RUF059",    # Allow zip() without strict
    "SIM105",    # Allow suppressible exception
    "SIM117",    # Allow multiple with statements
    "TRY300",    # Allow return in try block
]
"python/playfast/core.pyi" = ["F811"]  # Allow stub overloads

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["src/", "examples/", ".venv", "tests/"]

[[tool.mypy.overrides]]
module = "playfast.rust_client"
disable_error_code = ["valid-type", "attr-defined"]

[tool.pyright]
include = ["python"]
exclude = ["src", "tests", "examples", "benchmarks"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportUnnecessaryIsInstance = false
reportMissingTypeStubs = false
reportUnusedVariable = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-q -n auto -m 'not slow'"
testpaths = ["tests/python"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
# Note: Doctest disabled by default (remove --doctest-modules)
# To run doctests: pytest --doctest-modules python/playfast
markers = [
    "integration: integration tests requiring network access",
    "asyncio: async tests",
    "apk: tests requiring APK files (skipped in CI)",
    "slow: slow tests (skipped by default)",
]

[tool.coverage.run]
source = ["python/playfast"]
omit = []

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "Cargo.toml:package.version"
]
version_variables = []
build_command = "python -m scripts.sync_changelog"
assets = [
    "docs/changelog.md",
    "uv.lock",
]
# Keep 0.x.x versions, don't auto-jump to 1.0.0
major_on_zero = false
# Allow version to remain at 0.x.x
allow_zero_version = true
tag_format = "v{version}"
commit_message = "chore(release): {version}"
# Use 'conventional' instead of deprecated 'angular'
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
# Disable GitHub release creation for now
upload_to_vcs_release = false
remote.type = "github"
remote.token.env = "GH_TOKEN"
# Use git config for commit author
commit_author = "Taeyun Jang <taeyun16@pm.me>"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "style", "test", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "chore", "ci", "docs", "build"]  # ci/chore/docs/build also trigger patch

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
install = "uv sync --all-packages --all-extras --dev -U --prerelease=if-necessary-or-explicit"
fmt = "ruff format"
format.ref = "fmt"
lint = "ruff check"
pyright = "pyright"
mypy = "mypy ."
fix = "ruff check --fix ."
fix_unsafe = "ruff check --fix --unsafe-fixes ."
build_docs = "mkdocs build"
serve_docs = "mkdocs serve"
test = "pytest"
test-seq = "pytest -n 0"
build = "maturin build --release"
dev = "maturin develop --release"
clean = "cargo clean"
deploy = "uv publish"

# Changelog management (git-cliff)
changelog = "git cliff -o CHANGELOG.md"
changelog_unreleased = "git cliff --unreleased"
changelog_tag = "git cliff --tag ${tag} -o CHANGELOG.md"
changelog_preview = "git cliff --unreleased --prepend CHANGELOG.md"

# Pre-commit hooks installation
[tool.poe.tasks.pre-commit-install]
sequence = [
  { cmd = "uv run pre-commit install --install-hooks --overwrite" },
  { cmd = "uv run pre-commit install --hook-type pre-push" },
]

# Combine multiple tasks
[tool.poe.tasks.check]
sequence = ["fmt", "lint", "pyright", "mypy", "test"]

[tool.poe.tasks.pre-commit-check]
sequence = ["fmt", "lint", "pyright", "mypy", "test"]

# Version & Release automation (semantic-release)
[tool.poe.tasks.version_check]
cmd = "semantic-release version --print"
env = { PYTHONUTF8 = "1" }

[tool.poe.tasks.version_bump]
cmd = "semantic-release version --no-push --no-tag --no-commit"
env = { PYTHONUTF8 = "1" }

[tool.poe.tasks.release]
help = "Create a local release commit and tag (no push)"
sequence = [
  { ref = "check" },
  { cmd = "semantic-release version --no-push", env = { PYTHONUTF8 = "1", SKIP = "uv-lock" } },
]

[tool.poe.tasks.release_push]
help = "Push main branch and tags after local release"
cmd = "git push origin main --follow-tags"
